scala support in examples