@@ -1,6 +1,7 @@
 apply plugin: 'java'
 apply plugin: 'groovy'
 apply plugin: 'clojure'
+apply plugin: 'scala'
 apply plugin: 'eclipse'
 apply plugin: 'idea'
 
@@ -12,13 +13,34 @@ repositories {
   clojarsRepo()
 }
 
+tasks.withType(ScalaCompile) {
+    scalaCompileOptions.fork = true
+    scalaCompileOptions.unchecked = true
+
+    configure(scalaCompileOptions.forkOptions) {
+        memoryMaximumSize = '1g'
+        jvmArgs = ['-XX:MaxPermSize=512m']
+    }
+}
+
 dependencies {
     compile project(':language-adaptors:rxjava-clojure')
     compile project(':language-adaptors:rxjava-groovy')
-    compile 'clj-http:clj-http:0.6.4' // https://clojars.org/clj-http
+    compile project(':language-adaptors:rxjava-scala')
+    compile project(':language-adaptors:rxjava-jruby')
+
     provided 'junit:junit:4.10'
     provided 'org.mockito:mockito-core:1.8.5'
+
+	// clojure
+    compile 'clj-http:clj-http:0.6.4' // https://clojars.org/clj-http
+	
+	// groovy
     groovy 'org.codehaus.groovy:groovy-all:1.8+'
+	
+	// scala
+    scalaTools 'org.scala-lang:scala-compiler:2.10+'
+    provided 'org.scalatest:scalatest_2.10:1.9.1'
 }
 
 /* 
